--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "node": ">=5.0"
   },
   "dependencies": {
+    "vm.js": "0.0.6"
+  },
+  "devDependencies": {
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
@@ -21,7 +24,6 @@
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
-    "libtess": "^1.2.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
