--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "node": ">=5.0"
   },
   "dependencies": {
-    "vm.js": "0.0.6"
+    "libtess": "^1.2.2"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
+    "coffee-script": "^1.11.1",
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
