--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "libtess": "^1.2.2"
   },
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "coffee-script": "^1.11.1",
-    "gulp": "^3.9.0",
+    "browserify": "^13.3.0",
+    "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.10.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-typescript": "^3.1.4",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "typescript": "^2.1.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
